Adjust pyproject.toml, MANIFEST.in
- Ensure new modules from #207 are packaged.
- Exclude .github etc. from distributions (parallel to
  iiasa/message_ix).

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,7 @@
+# Repository files for development, not distribution
+exclude .*
+prune .github
+
 # Data for testing
 prune message_ix_models/data/test/advance
 prune message_ix_models/data/test/gea
@@ -5,6 +9,7 @@ prune message_ix_models/data/test/iea
 prune message_ix_models/data/test/shape
 prune message_ix_models/data/test/snapshot-*
 prune message_ix_models/data/test/ssp
+
 # Larger package data
 # - Not distributed on PyPI.
 # - Should be fetched with Pooch from GitHub.
