--- a/message_ix_models/data/transport/set.yaml
+++ b/message_ix_models/data/transport/set.yaml
@@ -203,6 +203,7 @@ unit:
 
     # Capacity
     Mv: 10⁶ vehicle
+    million * v: 10⁶ vehicle
 
     # Activity
     Gp * km / a / v: 10⁹ passenger-kilometre per vehicle-year
